# institutional-market-engine

./: .env.example  .gitignore  PROJECT_PHILOSOPHY.md  README.md  RESEARCH_JOURNAL.md  pyproject.toml
config/: NASDAQ30.txt  lista_completa_nasdaq.txt  nasdaq100_market_caps.csv  nasdaq30_market_caps.csv  tickers_piloto.txt
docs/: ADAPTIVE_INTELLIGENCE_ALLOCATION_ENGINE.md  ADAPTIVE_UNIVERSE_ENGINE.md  ADAPTIVE_UNIVERSE_TOURNAMENT.md  ALLOCATION_CALIBRATION_LABORATORY_0951.md  ALLOCATION_DIAGNOSTICS_CORRECTION_0952.md  CHAMPION_INTELLIGENCE_COUNCIL_099.md  CHAMPION_LIFECYCLE_ENGINE_096.md  CHAMPION_RESILIENCE_ENGINE_098.md  CHAMPION_STRESS_CALIBRATION_0982.md  CHAMPION_STRESS_ENGINE_0981.md  CHAMPION_SURVIVAL_ENGINE_097.md  CHAMPION_VALIDATION_LABORATORY.md  EVOLUTIONARY_UNIVERSE_LABORATORY.md  FACTOR_CONTRIBUTION_REPORT.md  MANIFESTO.MD  MANIFESTO.md  MARKET_MEMORY_DECISION_0942.md  MARKET_MEMORY_ENGINE.md  RARE_EVENT_EVALUATION.md  REGIME_TRANSITION_LABORATORY.md  REGIME_TRANSITION_SYNCHRONIZATION_0931.md  SMART_MONEY_REGIME_DYNAMICS.md  SURVIVAL_UTILITY_CALIBRATION_0971.md  UNIVERSE_INTELLIGENCE.md
docs/baselines/: 2026-07-16_SNDK_PARTIAL.md
docs/culture/: README.md  how_we_think.md  invitation_to_future_researchers.md  our_measure_of_success.md  scientific_ethics.md  the_spirit_of_wonder.md  to_future_researchers.md  why_we_build.md  your_questions_matter.md
docs/milestones/: milestone-007-champion-intelligence-council.md
docs/research-foundation-milestone-001/: BASELINES.md  CHANGELOG.md  DISCOVERIES.md  INTEGRATION_INSTRUCTIONS.md  LEGACY.md  LETTER_TO_THE_NEXT_RESEARCHER.md  PROJECT_PHILOSOPHY.md  README.md  RESEARCH_JOURNAL.md  RESEARCH_MANIFESTO.md  RESEARCH_ROADMAP.md
snapshots/BASELINE_UNIVERSO_260_2026_V0.7/: BASELINE_UNIVERSO_260_2026_V0.7.json  BASELINE_UNIVERSO_260_2026_V0.7.md
src/market_engine/: __init__.py  adaptive_intelligence_allocation_cli.py  adaptive_universe_cli.py  allocation_calibration_cli.py  allocation_diagnostics_correction_cli.py  champion_intelligence_council_cli.py  champion_lifecycle_cli.py  champion_resilience_cli.py  champion_stress_cli.py  champion_survival_cli.py  champion_validation_cli.py  cli.py  config.py  distribution_reliability_calibration_cli.py  divergence_outcomes_cli.py  evolutionary_universe_cli.py  factor_contribution_cli.py  historical_outcome_distribution_cli.py  market_memory_cli.py  market_memory_confidence_cli.py  market_memory_decision_cli.py  market_morphology_cli.py  memory_cli.py  regime_cli.py  (+9 more)
tests/: test_adaptive_intelligence_allocation.py  test_adaptive_memory.py  test_adaptive_universe.py  test_allocation_calibration.py  test_allocation_diagnostics_correction.py  test_champion_intelligence_council.py  test_champion_lifecycle.py  test_champion_resilience.py  test_champion_stress.py  test_champion_survival.py  test_champion_validation.py  test_distribution_reliability_calibration.py  test_divergence_outcomes.py  test_evolutionary_universe.py  test_factor_contribution.py  test_gap_features.py  test_gap_predictor.py  test_historical_outcome_distributions.py  test_market_memory.py  test_market_memory_confidence.py  test_market_memory_decision.py  test_market_morphology.py  test_market_morphology_visualizer.py  test_model_evaluation.py  test_model_registry.py  test_regime_transition.py  test_research_snapshot.py  test_sample_morphology_fidelity.py  test_sentinel_divergence.py  test_smart_money_regimes.py  test_survival_utility.py  test_universe_intelligence.py  test_universe_tournament.py  test_walk_forward.py
(+45 files in other folders)
