[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "institutional-market-engine"
version = "0.6.0"
description = "Experimental institutional market analysis engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
market-engine = "market_engine.cli:main"
market-registry = "market_engine.registry_cli:main"
market-memory = "market_engine.memory_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
