[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "institutional-market-engine"
version = "1.0.0a3"
description = "Experimental institutional market analysis engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "scikit-learn>=1.3",
  "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
market-engine = "market_engine.cli:main"
market-registry = "market_engine.registry_cli:main"
market-memory = "market_engine.memory_cli:main"
market-snapshot = "market_engine.snapshot_cli:main"
market-universe = "market_engine.universe_cli:main"
market-regime = "market_engine.regime_cli:main"
market-adaptive-universe = "market_engine.adaptive_universe_cli:main"
market-universe-tournament = "market_engine.universe_tournament_cli:main"
market-evolutionary-universe = "market_engine.evolutionary_universe_cli:main"
market-factor-contribution = "market_engine.factor_contribution_cli:main"
market-champion-validation = "market_engine.champion_validation_cli:main"
market-regime-transition = "market_engine.regime_transition_cli:main"
market-market-memory = "market_engine.market_memory_cli:main"
market-memory-confidence = "market_engine.market_memory_confidence_cli:main"
market-memory-decision = "market_engine.market_memory_decision_cli:main"
market-intelligence-allocation = "market_engine.adaptive_intelligence_allocation_cli:main"
market-allocation-calibration = "market_engine.allocation_calibration_cli:main"
market-allocation-diagnostics = "market_engine.allocation_diagnostics_correction_cli:main"
market-champion-lifecycle = "market_engine.champion_lifecycle_cli:main"
market-champion-survival = "market_engine.champion_survival_cli:main"
market-survival-utility = "market_engine.survival_utility_cli:main"
market-champion-resilience = "market_engine.champion_resilience_cli:main"
market-champion-stress = "market_engine.champion_stress_cli:main"
market-champion-council = "market_engine.champion_intelligence_council_cli:main"
market-morphology = "market_engine.market_morphology_cli:main"
market-sample-fidelity = "market_engine.sample_morphology_fidelity_cli:main"
market-morphology-visualizer = "market_engine.market_morphology_visualizer_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
